fix: CloseIcon too small in mobile nav fo docs (#126)

--- a/src/icons/index.module.scss
+++ b/src/icons/index.module.scss
@@ -30,6 +30,11 @@
   width: var(--base);
 }
 
+.extra-large {
+  width: calc(var(--base) * 1.25);
+  height: calc(var(--base) * 1.25);
+}
+
 .full {
   height: 100%;
   width: 100%;
